Attempt to fix unexpected word-wrapping in iOS

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -134,7 +134,6 @@ a {
             line-height: 1.2;
             padding: 0.25em;
             margin: 0;
-            word-wrap: normal;
 
             &.date-time-frame {
                 font-size: 1.25em;
@@ -143,6 +142,7 @@ a {
 
                 span {
                     display: inline-block;
+                    white-space: nowrap;
 
                     &.date {
                         font-weight: bold;
